k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carbon-app-deployment
  namespace: "2401129"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carbon-emission-app
  template:
    metadata:
      labels:
        app: carbon-emission-app
    spec:
      imagePullSecrets:
        - name: nexus-secret 
      containers:
        - name: carbon-app-container
          # 👇 Use the Hostname here (Jenkins will auto-replace it with the IP)
          image: nexus-service-for-docker-hosted-registry.nexus.svc.cluster.local:8085/2401129/carbon-emission-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
